_nodes/vps/etc/iptables.up.rules
# Generated by iptables-save v1.4.14 on Fri Apr  8 19:41:36 2016
*nat
:PREROUTING ACCEPT [215763031:26855564877]
:POSTROUTING ACCEPT [6922336:479359036]
:OUTPUT ACCEPT [6922378:479361772]
# ssl port forward
#-I PREROUTING -i eth0 -p tcp --dport 443 -j DNAT --to-destination 10.0.40.129:443
# openvpn snat
#-A POSTROUTING -s 10.10.10.0/24 -j SNAT --to-source 89.32.146.88
# masquarade lxc vms
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Fri Apr  8 19:41:36 2016
# Generated by iptables-save v1.4.14 on Fri Apr  8 19:41:36 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp --dport 1194 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1918 -m state --state NEW -m recent --set --name DEFAULT --rsource
-A INPUT -p tcp -m tcp --dport 1918 -m state --state NEW -m recent --update --seconds 60 --hitcount 10 --name DEFAULT --rsource -j DROP
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1918 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1918 -j ACCEPT
-A INPUT -p udp -m udp --dport 1919 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -i eth0 -j DROP
-A FORWARD -j ACCEPT
-A OUTPUT -j ACCEPT
-A OUTPUT -p gre -j ACCEPT
COMMIT
# Completed on Fri Apr  8 19:41:36 2016
# Generated by iptables-save v1.4.14 on Fri Apr  8 19:41:36 2016
*mangle
:PREROUTING ACCEPT [1433866507:490578913851]
:INPUT ACCEPT [1432980536:489906526128]
:FORWARD ACCEPT [875852:665891097]
:OUTPUT ACCEPT [1680623457:1333283896997]
:POSTROUTING ACCEPT [1681498316:1333949629238]
COMMIT
# Completed on Fri Apr  8 19:41:36 2016
